--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -39,40 +39,46 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="https://www.amazon.fr/SPORTS-Standard-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0CB6XYZHW/ref=sr_1_1?crid=122RLON41U7DB&keywords=ea+fc+24+ps5&qid=1696531120&sprefix=ea+f%2Caps%2C81&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81swenNfj-L._AC_SL1500_.jpg" alt="EA FC" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077PhantomLiberty_CDPROJEKTRED_DLC_S2_1200x1600-3acec02a8b11a2c50ba8dd3cb217f1c6" alt="Cyberpunk 2077" class="game" /></a>
       <figcaption>
-        EA FC 24
+        Cyberpunk 2077
       </figcaption>
       <figcaption>
-        69,99€
+        Phantom Liberty
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Achat sur Playstation
+      </figcaption>
+      <figcaption>
+        29,99€
+      </figcaption>
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/FINAL-FANTASY-XVI-Deluxe-PS5/dp/B0BPM1MNPM/ref=sr_1_1?crid=SLH3VB0HCVW0&keywords=final%2Bfantasy%2B16&qid=1686847568&sprefix=final%2Bfantasy%2B16%2Caps%2C79&sr=8-1&th=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/81b-xYJXUfL._AC_SL1500_.jpg" alt="Final Fantasy XVI" class="game" /></a>
+      <a href="https://www.amazon.fr/Marvels-Spider-Man-Physique-Fran%C3%A7ais-PlayStation/dp/B0C7VN5J81/ref=sr_1_2?crid=5VCDSGCFOXKX&keywords=spiderman+2+ps5&qid=1697238612&sprefix=spider%2Caps%2C86&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81qBiCSoegL._AC_SL1500_.jpg" alt="Spider-Man 2" class="game" /></a>
       <figcaption>
-        Final Fantasy XVI
+        Spider-Man 2
       </figcaption>
       <figcaption>
-        71,99€ sur Amazon
+        Actuellement indisponible
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
+      <a href="https://www.amazon.fr/ASSASSINS-CREED-MIRAGE-LAUNCH-PS5/dp/B0BDZ139TS/ref=sr_1_1?crid=3TPXXMI8LW1TD&keywords=assassins%2Bcreed%2Bmirage%2Bps5&qid=1697238504&sprefix=assasins%2Bc%2Caps%2C131&sr=8-1&th=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81jAbsZEC-L._AC_SL1500_.jpg" alt="AC" class="game" /></a>
       <figcaption>
-        The Legend of Zelda: Link's Awakening
+        Assasin's Creed Mirage
       </figcaption>
       <figcaption>
-        44,49€ sur Amazon
+        59,99€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="gamesLine">
