--- a/livres.html
+++ b/livres.html
@@ -6053,20 +6053,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Roi-Lear-William-Shakespeare/dp/2070468518/ref=d_pd_sim_sccl_2_2/257-0666022-3977509?pd_rd_w=bDI75&content-id=amzn1.sym.05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_p=05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_r=ZET7EQXK59NJDF41VNHA&pd_rd_wg=ct7FR&pd_rd_r=f24cb70a-31c4-4604-8fc1-56c88faf9854&pd_rd_i=2070468518&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/51mJz27p9KL.jpg" alt="Le Roi Lear" class="books" /></a>
+      <a href="https://www.amazon.fr/Main-basse-largent-foot-fran%C3%A7ais/dp/2221272544/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1697233487&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61Z2kxdIaBL._SL1500_.jpg" alt="Main basse sur l'argent du foot français" class="books" /></a>
       <figcaption>
-        William Shakespeare
+        Christophe Bouchet
       </figcaption>
       <figcaption>
-        Le Roi Lear
+        Main basse sur l'argent
       </figcaption>
       <figcaption>
-        2,00€
+        du foot français
       </figcaption>
-    </figure>-->
+      <figcaption>
+        21,00€
+      </figcaption>
+    </figure>
 
     <!--Livre 99-->
     <figure>
