--- a/livres.html
+++ b/livres.html
@@ -6118,20 +6118,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Tueurs-en-s%C3%A9rie-made-France/dp/2221272366/ref=sr_1_1?crid=FUF9TP2V1HPU&keywords=tueurs+en+serie+made+in+france&qid=1696966473&sprefix=tueurs+en+serie+made%2Caps%2C87&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/617E0uc1QDL._SL1142_.jpg" alt="Tueurs en série made in France" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Gilbert Thiel
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Tueurs en série made in France
       </figcaption>
       <figcaption>
-        19,90€
+        26,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
