--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://cdn.sega.co.uk/store-fm/public/styles/640/public/content/media/image/cover/fm24_2d_packshot.jpg?itok=tvzSrgcS" alt="Football Manager 2024" class="game" /></a>
       <figcaption>
@@ -37,7 +37,7 @@
       <figcaption>
         Achat via le PC
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2-->
     <figure>
