--- a/livres.html
+++ b/livres.html
@@ -6148,20 +6148,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/plus-dangereux-jeux-Richard-Connell/dp/2373852055/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2Z1RI3Z2PFRTD&keywords=the+most+dangerous+game&qid=1698595478&sprefix=the+most+dangerous+game%2Caps%2C76&sr=8-4" target="_blank"> <img
+          src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/71MyqAH9gML._SL1131_.jpg" alt="Le plus dangereux des jeux" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Richard Connell
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Le plus dangereux des jeux
       </figcaption>
       <figcaption>
-        35,00€
+        6,50€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
