--- a/livres.html
+++ b/livres.html
@@ -6165,20 +6165,23 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Dictionnaire-amoureux-%C3%A9crivains-fran%C3%A7ais-daujourdhui/dp/2259305814/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1RUXFW5UVDWFI&keywords=beigbeder&qid=1699302861&sprefix=beigbeder%2Caps%2C78&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/51+QY8OJ9pL._SL1218_.jpg" alt="Dictionnaire amoureux des écrivains français d'aujourd'hui" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Frédéric Beigbeder
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Dictionnaire amoureux des
       </figcaption>
       <figcaption>
-        17,90€
+        écrivains français d'aujourd'hui
       </figcaption>
-    </figure>-->
+      <figcaption>
+        29,00€
+      </figcaption>
+    </figure>
 
     <!--Livre 98
     <figure>
