--- a/livres.html
+++ b/livres.html
@@ -5328,7 +5328,7 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.com.be/Chagrin-dhumour-S%C3%A9bastien-Thoen/dp/B0B4ZXG99C/ref=sr_1_1?crid=JOOIEJJ366AJ&keywords=sebastien+thoen&qid=1666386436&sprefix=sebastien+thoen%2Caps%2C61&sr=8-1"
+      <a href="https://www.amazon.fr/Chagrin-dhumour-S%C3%A9bastien-Thoen/dp/B0B4ZXG99C/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1699462808&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81wzbcDMQ9L.jpg" alt="Chagrin d'humour" class="books" /></a>
       <figcaption>
         Sébastien Thoen
