maj phantom city

--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="#" target="_blank"> <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077PhantomLiberty_CDPROJEKTRED_DLC_S2_1200x1600-3acec02a8b11a2c50ba8dd3cb217f1c6" alt="Cyberpunk 2077" class="game" /></a>
       <figcaption>
@@ -51,7 +51,7 @@
       <figcaption>
         29,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3-->
     <figure>
