--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -65,7 +65,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 4-->
+    <!--Jeu 4
     <figure>
       <a href="https://www.amazon.fr/ASSASSINS-CREED-MIRAGE-LAUNCH-PS5/dp/B0BDZ139TS/ref=sr_1_1?crid=3TPXXMI8LW1TD&keywords=assassins%2Bcreed%2Bmirage%2Bps5&qid=1697238504&sprefix=assasins%2Bc%2Caps%2C131&sr=8-1&th=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81jAbsZEC-L._AC_SL1500_.jpg" alt="AC" class="game" /></a>
@@ -75,7 +75,7 @@
       <figcaption>
         59,99€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="gamesLine">
