--- a/livres.html
+++ b/livres.html
@@ -69,7 +69,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4-->
+    <!--Livre 4
     <figure>
       <a href="https://www.amazon.fr/Bien-s%C3%BBr-que-poissons-froid/dp/2378803494/ref=sr_1_1?keywords=fanny+ruwet&qid=1679415487&sprefix=fanny+ru%2Caps%2C87&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61kTx1mVCWL.jpg" alt="Bien sûr que les poissons ont froid" class="books" /></a>
@@ -86,7 +86,7 @@
       <figcaption>
         19,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -167,7 +167,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 10-->
+    <!--Livre 10
     <figure>
       <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/2072965829/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1605406820&sr=1-27"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81PFUAo0RSL.jpg" alt="L’anomalie" class="books" /></a>
@@ -180,7 +180,7 @@
       <figcaption>
         9,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 11-->
     <figure>
@@ -250,7 +250,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 15-->
+    <!--Livre 15
     <figure>
       <a href="https://www.amazon.fr/Detto-tra-noi-Alessandro-Piero/dp/8804679611/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3SG3UWQ406YCO&keywords=detto+tra+noi&qid=1641825593&sprefix=detto+tra+noi%2Caps%2C65&sr=8-1" target="_blank">
         <img src="https://images-na.ssl-images-amazon.com/images/I/71NEI2aOy6L.jpg" alt="Detto tra noi" class="books" /></a>
@@ -263,7 +263,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 16-->
     <figure>
