--- a/livres.html
+++ b/livres.html
@@ -167,20 +167,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 10
+    <!--Livre 10-->
     <figure>
-      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/2072965829/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1605406820&sr=1-27"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/81PFUAo0RSL.jpg" alt="L’anomalie" class="books" /></a>
+      <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/275567007X/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="L’anomalie" class="books" /></a>
       <figcaption>
-        Hervé Le Tellier
+        Randall Schwerdorffer
       </figcaption>
       <figcaption>
-        L’anomalie
+        Itinéraire d'un avocat
       </figcaption>
       <figcaption>
-        9,20€
+        hors norme
       </figcaption>
-    </figure>-->
+      <figcaption>
+        19,95€
+      </figcaption>
+    </figure>
 
     <!--Livre 11-->
     <figure>
@@ -250,20 +253,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 15
+    <!--Livre 15-->
     <figure>
-      <a href="https://www.amazon.fr/Detto-tra-noi-Alessandro-Piero/dp/8804679611/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3SG3UWQ406YCO&keywords=detto+tra+noi&qid=1641825593&sprefix=detto+tra+noi%2Caps%2C65&sr=8-1" target="_blank">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71NEI2aOy6L.jpg" alt="Detto tra noi" class="books" /></a>
+      <a href="https://www.amazon.fr/lombre-Big-Five-nations-perdues-football/dp/2757605755/?_encoding=UTF8&pd_rd_w=kNb6f&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=A4GKFCYHH0YAT7PZRXAQ&pd_rd_wg=Td9pL&pd_rd_r=902c92fe-6c14-40e9-b4f9-8b9e854a9adc&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank">
+        <img src="https://m.media-amazon.com/images/I/41plp0OoDfL.jpg" alt="A l'ombre du Big-Five" class="books" /></a>
       <figcaption>
-        Alessandro Del Piero
+        David Lortholary
       </figcaption>
       <figcaption>
-        Detto tra noi
+        A l'ombre du Big-Five
       </figcaption>
       <figcaption>
-        18,00€
+        23,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 16-->
     <figure>
@@ -6183,35 +6186,38 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Crimes-Psychocriminologie-morphoanalyse-traces-sang/dp/2017165328/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71RHQX7ltNL._SL1500_.jpg" alt="Crimes: Psychocriminologie et morphoanalyse des traces de sang" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Peggy Allimann et Céline Nicloux
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Crimes: Psychocriminologie et
       </figcaption>
       <figcaption>
-        19,90€
+        morphoanalyse des traces de sang
       </figcaption>
-    </figure>-->
+      <figcaption>
+        29,95€
+      </figcaption>
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Ce-petit-morceau-tissu-rouge/dp/234700266X/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/51jxr7NaNeL._SL1230_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Romuald Muller
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Ce petit morceau de tissu rouge
       </figcaption>
       <figcaption>
-        23,56€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
