--- a/livres.html
+++ b/livres.html
@@ -69,24 +69,21 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4
+    <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/Bien-s%C3%BBr-que-poissons-froid/dp/2378803494/ref=sr_1_1?keywords=fanny+ruwet&qid=1679415487&sprefix=fanny+ru%2Caps%2C87&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/61kTx1mVCWL.jpg" alt="Bien sûr que les poissons ont froid" class="books" /></a>
+      <a href="https://www.amazon.fr/Affaire-Chevaline-Imen-Ghouali/dp/2259317553/ref=sr_1_fkmr0_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1F12ISI6XAFGK&keywords=tuerie+chevaline+crime+parfait&qid=1702647923&sprefix=tuerie+chevaline+crime%2Caps%2C3850&sr=8-1-fkmr0" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71s8ldZlqqL._SL1327_.jpg" alt="Affaire Chevaline" class="books" /></a>
       <figcaption>
-        Fanny Ruwet
+        Imen Ghouali et Brendan Kemmet
       </figcaption>
       <figcaption>
-        Bien sûr que les
+        Affaire Chevaline
       </figcaption>
     </figcaption>
-    <figcaption>
-      poissons ont froid
-    </figcaption>
       <figcaption>
-        19,00€
+        20,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
