--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -53,7 +53,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 3-->
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/Marvels-Spider-Man-Physique-Fran%C3%A7ais-PlayStation/dp/B0C7VN5J81/ref=sr_1_2?crid=5VCDSGCFOXKX&keywords=spiderman+2+ps5&qid=1697238612&sprefix=spider%2Caps%2C86&sr=8-2"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81qBiCSoegL._AC_SL1500_.jpg" alt="Spider-Man 2" class="game" /></a>
@@ -63,7 +63,7 @@
       <figcaption>
         Actuellement indisponible
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 4
     <figure>
