--- a/livres.html
+++ b/livres.html
@@ -167,7 +167,7 @@
     <!--Livre 10-->
     <figure>
       <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/275567007X/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="L’anomalie" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="Itinéraire d'un avocat" class="books" /></a>
       <figcaption>
         Randall Schwerdorffer
       </figcaption>
@@ -1026,7 +1026,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 63-->
+    <!--Livre 63
     <figure>
       <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg" alt="Derniers jugements avant liquidation" class="books" /></a>
@@ -1042,7 +1042,7 @@
       <figcaption>
         18,25€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 64-->
     <figure>
@@ -1907,7 +1907,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 113-->
+    <!--Livre 113
     <figure>
       <a href="https://www.amazon.fr/Nordahl-Lelandais-proc%C3%A8s-Noyer-Ma%C3%ABlys/dp/2268106713/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2DUNSHV14QT0F&keywords=Aude+Bariety+-+Nordal+Lelandais&qid=1650636389&sprefix=aude+bariety+-+nordal+lelandais%2Caps%2C59&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61FBBfiS9RL.jpg" alt="Nordahl Lelandais" class="books" /></a>
@@ -1923,7 +1923,7 @@
       <figcaption>
         15,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 114-->
     <figure>
@@ -1955,7 +1955,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 116-->
+    <!--Livre 116
     <figure>
       <a href="https://www.amazon.fr/Madame-Nouvelle-%C3%A9dition-Gustave-Flaubert/dp/2253183466/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650317512&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71-4Uee9JYL.jpg"
           alt="Madame Bovary" class="books" /></a>
@@ -1968,7 +1968,7 @@
       <figcaption>
         3,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -2162,7 +2162,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 116-->
+    <!--Livre 116
     <figure>
       <a href="https://www.amazon.fr/Bel-Ami-Guy-Maupassant/dp/2253009008/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3J711ALIGBE44&keywords=bel+ami+poche&qid=1650317364&sprefix=bel+ami+poche%2Caps%2C61&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81JZpP+1xgL.jpg" alt="Bel-Ami" class="books" /></a>
@@ -2175,7 +2175,7 @@
       <figcaption>
         3,50€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -2209,7 +2209,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 115-->
+    <!--Livre 115
     <figure>
       <a href="https://www.amazon.fr/L%C3%A9ducation-sentimentale-Gustave-Flaubert/dp/2253010693/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=JN2OVE450OG7&keywords=education+sentimentale+poche&qid=1650317380&sprefix=education+sentimentale+poche%2Caps%2C55&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81NErbd-ePL.jpg" alt="L'Education sentimentale" class="books" /></a>
@@ -2222,7 +2222,7 @@
       <figcaption>
         4,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 116-->
     <figure>
@@ -2605,7 +2605,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Poutine-par-lui-m%C3%AAme-conqu%C3%AAte-pouvoir/dp/286553314X/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30COX288OOODO&keywords=poutine&qid=1650420430&sprefix=poutine%2Caps%2C67&sr=8-12"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61eQbu5hYFL.jpg" alt="Poutine par lui-même" class="books" /></a>
@@ -2618,7 +2618,7 @@
       <figcaption>
         22,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -5388,7 +5388,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Friends-amours-cette-chose-terrible/dp/2749950996/ref=sr_1_1?keywords=matthew+perry&qid=1668301048&qu=eyJxc2MiOiIyLjIzIiwicXNhIjoiMS42MiIsInFzcCI6IjEuNTgifQ%3D%3D&sprefix=matthe%2Caps%2C81&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61MrdGJmqHL.jpg" alt="Matthew Perry" class="books" /></a>
@@ -5404,7 +5404,7 @@
       <figcaption>
         20,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -6165,7 +6165,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Dictionnaire-amoureux-%C3%A9crivains-fran%C3%A7ais-daujourdhui/dp/2259305814/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1RUXFW5UVDWFI&keywords=beigbeder&qid=1699302861&sprefix=beigbeder%2Caps%2C78&sr=8-2"
         target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/51+QY8OJ9pL._SL1218_.jpg" alt="Dictionnaire amoureux des écrivains français d'aujourd'hui" class="books" /></a>
@@ -6181,7 +6181,7 @@
       <figcaption>
         29,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
