--- a/livres.html
+++ b/livres.html
@@ -5081,7 +5081,7 @@
     <!--Livre 97-->
     <figure>
       <a href="https://www.amazon.fr/choses-humaines-Karine-Tuil/dp/2072921112/ref=sr_1_1?keywords=la+chose+humaine&qid=1661859700&sprefix=la+chose+hu%2Caps%2C94&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71v0ypQoDLL.jpg" alt="Les choses humaines" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71XWPFfB0bL._SL1500_.jpg" alt="Les choses humaines" class="books" /></a>
       <figcaption>
         Karine Tuil
       </figcaption>
@@ -5111,7 +5111,7 @@
     <!--Livre 99-->
     <figure>
       <a href="https://www.amazon.fr/Splendeur-lInfamie-Erik-LARSON/dp/2749157382/ref=sr_1_1?keywords=la+splendeur+et+l%27infamie&qid=1661859826&sprefix=la+splen%2Caps%2C89&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/517ISYfZZ3S.jpg" alt="La Splendeur et l'Infamie" class="books" /></a>
+          src="https://m.media-amazon.com/images/I/517ISYfZZ3S._SL1200_.jpg" alt="La Splendeur et l'Infamie" class="books" /></a>
       <figcaption>
         Erik Larson
       </figcaption>
@@ -5126,7 +5126,7 @@
     <!--Livre 100-->
     <figure>
       <a href="https://www.amazon.fr/Trahisons-DGSE-secrets-famille-l%C3%A9gendes/dp/2234091411/ref=sr_1_1?crid=2J7UOV5NGIDX3&keywords=trahison+a+la+dgse&qid=1661859842&sprefix=trahison+a%2Caps%2C79&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/81WRtVV9inL.jpg" alt="Trahisons à la DGSE" class="books" /></a>
+          src="https://m.media-amazon.com/images/I/81WRtVV9inL._SL1500_.jpg" alt="Trahisons à la DGSE" class="books" /></a>
       <figcaption>
         Antoine Izambard
       </figcaption>
@@ -5143,7 +5143,7 @@
     <!--Livre 97-->
     <figure>
       <a href="https://www.amazon.fr/Gang-Stories-Franck-Haderer/dp/2017101400/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=VUOXTUQN35DF&keywords=gang+stories&qid=1661859858&sprefix=gang+stories%2Caps%2C76&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71eVLutgknL.jpg" alt="Gang Stories" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71eVLutgknL._SL1500_.jpg" alt="Gang Stories" class="books" /></a>
       <figcaption>
         Franck Haderer
       </figcaption>
@@ -5205,7 +5205,7 @@
     <!--Livre 97-->
     <figure>
       <a href="https://www.amazon.fr/JEANNE-DARC-Claude-Gauvard/dp/2070178552/ref=sr_1_1?crid=33W6SY3RDB8G3&keywords=jeanne+d%27arc+heroine&qid=1661860001&sprefix=jeanne+d%27arc+her%2Caps%2C61&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/61lqWGHgMTL.jpg" alt="JEANNE D'ARC" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61lqWGHgMTL._SL1500_.jpg" alt="JEANNE D'ARC" class="books" /></a>
       <figcaption>
         Claude Gauvard
       </figcaption>
@@ -5250,7 +5250,7 @@
     <!--Livre 100-->
     <figure>
       <a href="https://www.amazon.fr/Feu-Sang-George-R-R-Martin/dp/2290374423/ref=sr_1_4?keywords=fire+%26+blood&qid=1662719988&sprefix=fire+%26+b%2Caps%2C83&sr=8-4" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/61W-dsw436L.jpg" alt="Feu et Sang" class="books" /></a>
+          src="https://m.media-amazon.com/images/I/61W-dsw436L._SL1122_.jpg" alt="Feu et Sang" class="books" /></a>
       <figcaption>
         George R. R. Martin
       </figcaption>
@@ -6165,23 +6165,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Dictionnaire-amoureux-%C3%A9crivains-fran%C3%A7ais-daujourdhui/dp/2259305814/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1RUXFW5UVDWFI&keywords=beigbeder&qid=1699302861&sprefix=beigbeder%2Caps%2C78&sr=8-2"
-        target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/51+QY8OJ9pL._SL1218_.jpg" alt="Dictionnaire amoureux des écrivains français d'aujourd'hui" class="books" /></a>
+      <a href="https://www.amazon.fr/nai-pas-dit-mon-dernier/dp/2957930528/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61LsCDR36cL._SL1500_.jpg" alt="Je n'ai pas dit mon dernier mot" class="books" /></a>
       <figcaption>
-        Frédéric Beigbeder
+        Eric Zemmour
       </figcaption>
       <figcaption>
-        Dictionnaire amoureux des
+        Je n'ai pas dit mon dernier mot
       </figcaption>
       <figcaption>
-        écrivains français d'aujourd'hui
+        21,90€
       </figcaption>
-      <figcaption>
-        29,00€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -6216,20 +6213,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Laffaire-Emmett-Till-Jean-Marie-Pottier/dp/2264083638/ref=pd_sim_d_sccl_3_4/259-1341521-5848809?pd_rd_w=c9xbd&content-id=amzn1.sym.55ef0fbe-0000-4194-b5f2-eb82b8cbc57c&pf_rd_p=55ef0fbe-0000-4194-b5f2-eb82b8cbc57c&pf_rd_r=KPJ656PQAQKB6EGVX0FG&pd_rd_wg=KFT2G&pd_rd_r=9cbce3ae-9b86-4b55-94e6-8013326f48c5&pd_rd_i=2264083638&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/715jfYZiHSL._SL1311_.jpg" alt="L'affaire Emmett Till" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Jean-Marie Pottier
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        L'affaire Emmett Till
       </figcaption>
       <figcaption>
-        35,00€
+        8,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
