--- a/livres.html
+++ b/livres.html
@@ -5058,7 +5058,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/grandes-plaidoiries-t%C3%A9nors-barreau/dp/2266216686/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=38B937BES0SV1&keywords=plaidoiries&qid=1654699336&sprefix=plaidoiries+%2Caps%2C70&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71JCTvQB9GL.jpg" alt="Les grandes plaidoiries des ténors du barreau" class="books" /></a>
@@ -5074,7 +5074,7 @@
       <figcaption>
         7,70€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -5421,7 +5421,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/12-r%C3%A8gles-pour-une-vie/dp/2290203130/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1668301092&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/51ucukOawNL.jpg" alt="12 règles pour une vie" class="books" /></a>
@@ -5437,7 +5437,7 @@
       <figcaption>
         Livre 1 de 2
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -5454,9 +5454,6 @@
       </figcaption>
       <figcaption>
         19,95€
-      </figcaption>
-      <figcaption>
-        Livre 2 de 2
       </figcaption>
     </figure>
   </div>
@@ -5619,7 +5616,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Laffaire-du-Golden-State-Killer/dp/2264079789/ref=sr_1_1?keywords=william+thorp+-+l%27affaire+du+golden+state+killer&qid=1682423679&sprefix=william+th%2Caps%2C93&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61BZc0rpBLL.jpg" alt="L'affaire du Golden State Killer" class="books" /></a>
@@ -5632,7 +5629,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -5891,7 +5888,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Laffaire-Alice-Crimmins-Ana%C3%AFs-Renevier/dp/2264079797/ref=sr_1_1?keywords=anais+renevier&qid=1686847732&sprefix=anais+rene%2Caps%2C77&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71u0hbm4WYL.jpg" alt="L'affaire Alice Crimmins" class="books" /></a>
@@ -5904,11 +5901,11 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Linconnu-Cleveland-Thibault-Raisse/dp/2264079800/ref=sr_1_1?keywords=l%27inconnu+de+cleveland&qid=1686847748&sprefix=l%27inconnu+de+cle%2Caps%2C77&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/71sRISo4CfL.jpg" alt="L'inconnu de Cleveland" class="books" /></a>
@@ -5921,7 +5918,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -6086,7 +6083,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/temps-combats-Nicolas-Sarkozy/dp/2213726485/?_encoding=UTF8&pd_rd_w=badGr&content-id=amzn1.sym.b8f182d4-be82-49d2-9854-7256c7ab0049%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=b8f182d4-be82-49d2-9854-7256c7ab0049&pf_rd_r=9RVZQ7VX3876BEBWV7HY&pd_rd_wg=Bwo4k&pd_rd_r=d69bbe1b-6ade-4043-a262-c5b5f2028551&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71D3SMQRnOL.jpg" alt="Le temps des combats" class="books" /></a>
@@ -6099,7 +6096,7 @@
       <figcaption>
         28,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -6133,7 +6130,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/meurtres-du-Lowcountry-Arthur-Cerf/dp/2264081953/ref=sr_1_1?crid=97PFTKW70VTX&keywords=les+meurtres+du+lowcountry&qid=1697930188&sprefix=les+meurtre%2Caps%2C89&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71c31QM4+ZL._SL1311_.jpg" alt="Les meurtres du Lowcountry" class="books" /></a>
@@ -6146,7 +6143,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
