--- a/livres.html
+++ b/livres.html
@@ -1026,23 +1026,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 63
+    <!--Livre 63-->
     <figure>
-      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg" alt="Derniers jugements avant liquidation" class="books" /></a>
+      <a href="https://www.amazon.fr/Barbarie-hommes-ordinaires-Daniel-Zagury/dp/2266324047/ref=rvi_d_sccl_4/259-1341521-5848809?pd_rd_w=FNMCW&content-id=amzn1.sym.bb5542a0-fbb2-443a-898f-780bdeb13fa3&pf_rd_p=bb5542a0-fbb2-443a-898f-780bdeb13fa3&pf_rd_r=1M36QT503W5BF8DKCB6S&pd_rd_wg=mocX9&pd_rd_r=d8c3cd9a-d223-4018-b823-b683ddec4939&pd_rd_i=2266324047&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/51QJrLHlaZL._SL1311_.jpg" alt="La Barbarie des hommes ordinaires" class="books" /></a>
       <figcaption>
-        Gilbert Thiel
+        Daniel Zagury
       </figcaption>
       <figcaption>
-        Derniers jugements avant
+        La Barbarie des hommes
       </figcaption>
       <figcaption>
-        liquidation
+        ordinaires
       </figcaption>
       <figcaption>
-        18,25€
+        8,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 64-->
     <figure>
@@ -1280,20 +1280,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 78
+    <!--Livre 78-->
     <figure>
-      <a href="https://www.amazon.fr/Lurking-How-Person-Became-User/dp/0374194335/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1587736100&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81tTTp%2BV3WL.jpg"
-          alt="Person become User" class="books" /></a>
+      <a href="https://www.amazon.fr/L%C3%A9nigme-tueurs-s%C3%A9rie-Daniel-ZAGURY/dp/226619335X/ref=rvi_d_sccl_5/259-1341521-5848809?pd_rd_w=FNMCW&content-id=amzn1.sym.bb5542a0-fbb2-443a-898f-780bdeb13fa3&pf_rd_p=bb5542a0-fbb2-443a-898f-780bdeb13fa3&pf_rd_r=1M36QT503W5BF8DKCB6S&pd_rd_wg=mocX9&pd_rd_r=d8c3cd9a-d223-4018-b823-b683ddec4939&pd_rd_i=226619335X&psc=1" target="_blank"> <img src="https://m.media-amazon.com/images/I/61DApliqBIL._SL1311_.jpg"
+          alt="L'énigme des tueurs en série" class="books" /></a>
       <figcaption>
-        Joanne McNeil
+        Daniel Zagury
       </figcaption>
       <figcaption>
-        How a Person Became a User
+        L'énigme des tueurs en série
       </figcaption>
       <figcaption>
-        25,44€
+        7,70€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 79-->
     <figure>
