--- a/livres.html
+++ b/livres.html
@@ -1907,23 +1907,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 113
+    <!--Livre 113-->
     <figure>
-      <a href="https://www.amazon.fr/Nordahl-Lelandais-proc%C3%A8s-Noyer-Ma%C3%ABlys/dp/2268106713/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2DUNSHV14QT0F&keywords=Aude+Bariety+-+Nordal+Lelandais&qid=1650636389&sprefix=aude+bariety+-+nordal+lelandais%2Caps%2C59&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61FBBfiS9RL.jpg" alt="Nordahl Lelandais" class="books" /></a>
+      <a href="https://www.amazon.fr/LEpaisseur-dun-cheveu-Claire-Berest/dp/222647501X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=VX1MLIB354W7&dib=eyJ2IjoiMSJ9.4RJDk3zQNCETFP4cZUpthuQt7xc54Lo7mwaptzrg5rASY5I2zGlKvPgauXa5rb81xkoSXtfmDyOY_gyaE_oNcG9oEjO6cJRH9Ds8Tf8V3up6XeRIuzH57byxs5TExYl2CKLelUrcMntY2gyX9hxFkQ.eNCXTPQ2b87d8SSMq707miJCKwYLpOm0z-3oEtPttlc&dib_tag=se&keywords=claire+berest&qid=1705172645&sprefix=claire+beres%2Caps%2C86&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71FhxtVoV2L._SL1500_.jpg" alt="L'Epaisseur d'un cheveu" class="books" /></a>
       <figcaption>
-        Aude Bariéty
+        Claire Berest
       </figcaption>
       <figcaption>
-        Du procès Noyer
+        L'Epaisseur d'un cheveu
       </figcaption>
       <figcaption>
-        au procès Maëlys
+        19,90€
       </figcaption>
-      <figcaption>
-        15,90€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 114-->
     <figure>
