--- a/livres.html
+++ b/livres.html
@@ -544,7 +544,7 @@
   <div class="booksLine">
     <!--Livre 33-->
     <figure>
-      <a href="https://www.amazon.fr/Mea-Culpa-Gaspard-Proust/dp/2259313868/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3BWHZNU855G4X&keywords=gaspard+proust&qid=1673056484&sprefix=gaspard+proust%2Caps%2C70&sr=8-5" target="_blank"> <img
+      <a href="https://www.amazon.fr/Mea-Culpa-Gaspard-Proust/dp/2266339826/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1673056484&sr=8-5" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/51P5xYM-s7L.jpg" alt="Mea Culpa" class="books" /></a>
       <figcaption>
         Gaspard Proust
@@ -553,7 +553,7 @@
         Mea Culpa
       </figcaption>
       <figcaption>
-        18,90€
+        7,70€
       </figcaption>
     </figure>
 
