--- a/livres.html
+++ b/livres.html
@@ -1950,40 +1950,40 @@
       </figcaption>
     </figure>
 
-    <!--Livre 116
+    <!--Livre 116-->
     <figure>
-      <a href="https://www.amazon.fr/Madame-Nouvelle-%C3%A9dition-Gustave-Flaubert/dp/2253183466/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650317512&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71-4Uee9JYL.jpg"
-          alt="Madame Bovary" class="books" /></a>
+      <a href="https://www.amazon.fr/ma%C3%AEtresse-italienne-Jean-Marie-Rouart/dp/2073041086/ref=sr_1_1?crid=1Z4QDAE93C8RS&keywords=la+maitresse+italienne+rouart&qid=1707317801&sprefix=la+maitresse+it%2Caps%2C100&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/81Rl-7mcofL._SL1500_.jpg"
+          alt="La maîtresse italienne" class="books" /></a>
       <figcaption>
-        Gustave Flaubert
+        Jean-Marie Rouart
       </figcaption>
       <figcaption>
-        Madame Bovary
+        La maîtresse italienne
       </figcaption>
       <figcaption>
-        3,90€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 117
+    <!--Livre 117-->
     <figure>
-      <a href="https://www.amazon.fr/Dernier-Jour-dun-Condamn%C3%A9/dp/2072699916/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650317564&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71g9ThJoDsL.jpg"
-          alt="Crimes et mystères de Paris" class="books" /></a>
+      <a href="https://www.amazon.fr/Comment-retrouv%C3%A9-Xavier-Dupont-Ligonn%C3%A8s/dp/2226483551/ref=sr_1_1?crid=3C2J68SHNDXWN&keywords=comment+j%27ai+retrouv%C3%A9+xavier+dupont+de+ligonn%C3%A8s&qid=1707525741&sprefix=dupont%2Caps%2C223&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/719wUg+MjfL._SL1500_.jpg"
+          alt="Comment j'ai retrouvé Xavier Dupont de Ligonnès" class="books" /></a>
       <figcaption>
-        Victor Hugo
+        Romain Puértolas
       </figcaption>
       <figcaption>
-        Le Dernier Jour
+        Comment j'ai retrouvé
       </figcaption>
       <figcaption>
-        d'un Condamné
+        Xavier Dupont de Ligonnès
       </figcaption>
       <figcaption>
-        2,00€
+        19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 118-->
     <figure>
