--- a/livres.html
+++ b/livres.html
@@ -6154,7 +6154,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/nai-pas-dit-mon-dernier/dp/2957930528/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/I/61LsCDR36cL._SL1500_.jpg" alt="Je n'ai pas dit mon dernier mot"
           class="books" /></a>
@@ -6167,7 +6167,7 @@
       <figcaption>
         21,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
