ajout deux livres

--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://shop.gotaga.tv/products/gourde" target="_blank"> <img
           src="https://shop.gotaga.tv/cdn/shop/files/gourde1.png?v=1695407346&width=800" alt="Gourde Gotaga" class="others" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         25,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2
     <figure>
