--- a/livres.html
+++ b/livres.html
@@ -2520,35 +2520,38 @@
       </figcaption>
     </figure>
 
-    <!--Livre 114
+    <!--Livre 114-->
     <figure>
-      <a href="https://www.amazon.fr/Macbeth-William-Shakespeare/dp/2070468496/ref=sr_1_2?keywords=macbeth&qid=1650420879&sprefix=macbe%2Caps%2C78&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71oEoWkj60L.jpg"
-          alt="Macbeth" class="books" /></a>
+      <a href="https://www.amazon.fr/Macbeth-William-Shakespeare/dp/2070468496/ref=sr_1_2?keywords=macbeth&qid=1650420879&sprefix=macbe%2Caps%2C78&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/71utiws9jxL._SL1311_.jpg"
+          alt="La disparition de Chandra Levy" class="books" /></a>
       <figcaption>
-        William Shakespeare
+        Hélène Coutard
       </figcaption>
       <figcaption>
-        Macbeth
+        La disparition
       </figcaption>
       <figcaption>
-        2,00€
+        de Chandra Levy
       </figcaption>
-    </figure>-->
+      <figcaption>
+        8,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 115
+    <!--Livre 115-->
     <figure>
-      <a href="https://www.amazon.fr/Rom%C3%A9o-Juliette-William-Shakespeare/dp/2070468488/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21PRRI8ID5GJN&keywords=romeo+et+juliette+shakespeare+poche&qid=1650420909&sprefix=romeo+et+juliette+shakespeare+poche%2Caps%2C59&sr=8-4"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71ki+fKYHjL.jpg" alt="Roméo et Juliette" class="books" /></a>
+      <a href="https://www.amazon.fr/Autopsie-lassassin-Daniel-Soucaze/dp/2372543636/ref=sr_1_1?crid=1VK4O4BYMPCI6&dib=eyJ2IjoiMSJ9.d5wFH5Zeixlh7evTX1CXtKJVfqHuffZ6b_inpV81gcNe62XbK4z0_dKC3SoNzga6I_DuSeeLJy-SBMN4trPTC_RU-mjssduSXrb4lBx-X6cnp2FC-xblCuLoH4q2UrNqeOhkBGl_zBZg1ES0UEDKJpamG8HH1tKX-ZCeKeqa1du_jLltdCE4hg9mZHCu96c9.qPDwbLdZO_9ytu7M8JLsjLDerljAxR6quTYKnjMhiPo&dib_tag=se&keywords=autopsie+de+l%27assassin&qid=1718462730&sprefix=autopsie+de+l%27%2Caps%2C81&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61G4krVZtPL._SL1228_.jpg" alt="Autopsie de l'assassin" class="books" /></a>
       <figcaption>
-        William Shakespeare
+        Daniel Soucaze
       </figcaption>
       <figcaption>
-        Roméo et Juliette
+        Autopsie de l'assassin
       </figcaption>
       <figcaption>
-        2,00€
+        21,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 116-->
     <figure>
