--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 12 février 2024
+    Mise à jour liste le 26 juin 2024
   </p>
   <p class="dateMAJ2">
-    Mise à jour liste le 21 aout 2023
+    Mise à jour prix le 21 aout 2023
   </p>
 
 </body>
