--- a/livres.html
+++ b/livres.html
@@ -5676,7 +5676,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Faute-%C3%A0-Rousseau-Eric-Naulleau/dp/2756114286/ref=pd_ci_mcx_mh_wsixn_v2_7?pd_rd_w=Snc1s&content-id=amzn1.sym.0346141b-bb3e-4345-acf3-620937a4fc3a&pf_rd_p=0346141b-bb3e-4345-acf3-620937a4fc3a&pf_rd_r=N56G17EGMKJ0N8EV30SX&pd_rd_wg=vGnIy&pd_rd_r=0a2b2999-acf2-4889-96c8-327bb754a025&pd_rd_i=2756114286"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/512NfE6JsxL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -5689,7 +5689,7 @@
       <figcaption>
         17,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
