--- a/livres.html
+++ b/livres.html
@@ -797,7 +797,7 @@
   </div>
 
   <div class="booksLine">
-    <!-- Livre 49-->
+    <!-- Livre 49
     <figure>
       <a href="https://www.amazon.fr/Au-bout-lenqu%C3%AAte-affaires-criminelles/dp/2412086982/?_encoding=UTF8&pd_rd_w=PixI5&content-id=amzn1.sym.5d80c1e5-0bb2-4369-b742-933c0c08997f&pf_rd_p=5d80c1e5-0bb2-4369-b742-933c0c08997f&pf_rd_r=KK977T97Q7N2ZNS40NVP&pd_rd_wg=yTTrZ&pd_rd_r=a047512d-b46b-4bc6-adbe-d55b155e9bbb&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61J11oAMgBL.jpg" alt="Au bout de l'enquête" class="books" /></a>
@@ -810,7 +810,7 @@
       <figcaption>
         19,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 50-->
     <figure>
